# mafia-moderator

./: Cargo.toml  README.md  Trunk.toml  index.html  input.css  release.sh  roles.md  serve.sh
docs/: index.html  input-17228f3cfc3c124a.css  input-200e95b2f38859f0.css  input-31c6d77d38c99acb.css  input-34b6ef46b5270913.css  input-3b2489b9721197d4.css  input-3e9b5506824b8d50.css  input-4e9be561ab1a4195.css  input-6616d0df62dd5b6d.css  input-80b8bf30bba191a2.css  input-837268421e3bb24f.css  input-87265b958c66efab.css  input-a44d1b5ff1483c00.css  input-bda075e2b7bb60e2.css  input-bda217ad68fa7aa1.css  input-d234d9c47f5316fb.css  input-d9f7fb825bac268c.css  input-daed4e5a9fb1c9aa.css  leptos-tutorial-1115a39b2f805eda.js  leptos-tutorial-1115a39b2f805eda_bg.wasm  leptos-tutorial-11aabbcfcb2a114d.js  leptos-tutorial-11aabbcfcb2a114d_bg.wasm  leptos-tutorial-14d4b39a00a029fa.js  leptos-tutorial-14d4b39a00a029fa_bg.wasm  leptos-tutorial-197c235d2da1573c.js  leptos-tutorial-197c235d2da1573c_bg.wasm  leptos-tutorial-22faa836deb33c0a_bg.wasm  leptos-tutorial-237c16e5fda9f17c.js  leptos-tutorial-24fab844c859521f.js  leptos-tutorial-24fab844c859521f_bg.wasm  leptos-tutorial-2841de3c75b30dd9.js  leptos-tutorial-2841de3c75b30dd9_bg.wasm  leptos-tutorial-33034b7fc7fa7db8.js  leptos-tutorial-33034b7fc7fa7db8_bg.wasm  leptos-tutorial-33eb24a9a3b6880.js  leptos-tutorial-33eb24a9a3b6880_bg.wasm  leptos-tutorial-4854ebb5842ec902.js  leptos-tutorial-4854ebb5842ec902_bg.wasm  leptos-tutorial-49e51bfc2161d2bc.js  leptos-tutorial-49e51bfc2161d2bc_bg.wasm  (+69 more)
src/: app.rs  mafia.rs  main.rs  user.rs  (+2 more)
(+10 files in other folders)
