[package]
name = "leptos-tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
leptos = { version = "0.6.15", features = ["csr", "serde"] }
leptos-use = "0.13.8"
serde = "1.0.213"
serde_json = "1.0.132"
uuid = { version = "1.11.0", features = ["v4"] }
web-sys = { version = "0.3.70", features = ["Storage"] }
