[package]
name = "leptos-tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-utils = "0.2.0"
itertools = "0.13.0"
leptos = { version = "0.6.15", features = ["csr", "serde"] }
leptos-use = "0.13.8"
serde = "1"
serde_json = "1"
uuid = { version = "1.11.0", features = ["v4"] }
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.70", features = ["Storage"] }
